# lotion-api

./: .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
cmd/: docker-start.sh  docker-up.sh
lotion/: asgi.py  settings.py  urls.py  wsgi.py
lotion/core/: apps.py  models.py  serializer.py  views.py
lotion/core/migrations/: 0001_initial.py  0002_alter_document_parent_uid.py  0003_alter_document_parent_uid.py
